--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,10 @@
 }
 
 .App {
-    background-color: white;
+    background-color: #FAFAFA;
+    font-family: Roboto,sans-serif;
+    overflow: hidden;
+    max-height: 100vh;
 }
 
 .heads {
@@ -14,8 +17,12 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin: 4px 12px;
+    /* margin: 4px 12px; */
     background-color: #fff;
+    padding: 15px;
+    box-shadow: 0 3px 3px 0 #0000001a;
+    z-index: 500;
+    position: relative;
 }
 
 .btn-container {
@@ -24,49 +31,115 @@
 }
 
 .btn1{
-    padding: 5px 20px;
+    padding: 7px 15px;
     margin-right: 6px;
     background-color: #F48023;
     color: #fff;
-    border-radius: 3px;
+    border-radius: 8px;
     border: 1px solid;
+    font-size: 18px;
 }
 .btn1:hover{
     cursor: pointer;
+    background-color: #fca35b;
 }
 
 .btn2 {
-
-    padding: 5px 20px;
+    font-size: 18px;
+    padding: 7px 15px;
     background-color: #fff;
-    border-radius: 3px;
-    border: 1px solid;
+    border-radius: 8px;
+    border: 1px solid #F48023;
+    color: #F48023;
 }
 .btn2:hover {
     background-color: #F48023;
+    color: #fff;
     cursor: pointer;
 }
 
 input {
-    width: 40px;
-    height: 10px;
+    width: 100%;
+    padding: 7px;
+    border: 1px solid #757575;
+    margin-bottom: 10px;
+}
+input:active{
     border: 1px solid #757575;
 }
 
 .mb {
     display: flex;
     width: 100%;
+    height: 100vh;
+    
+}
+
+
+.right-image {
+    color: transparent;
+    height: 100vh;
+    position: relative;
 }
 
 .left-panel {
-    width: 40%;
-    margin: 80px auto;
+    /* width: 40%; */
+    /* margin: 80px auto; */
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-self: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    gap: 30px;
+    padding: 120px;
+    
+}
+.left-panel p {
+    font-size: 18px;
+    width: 100%;
+    word-wrap: break-word;
+    letter-spacing: .05rem;
 }
 
 .form-con {
     width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
+.form-con button {
+    color: #FAFAFA;
+    text-align: center;
+    background-color: #F48023;
+    width: 100%;
+    padding: 8px;
+    border: 1px solid;
+    border-radius: 2px;
+    font-size: 16px;
+    margin-top: 12px;
+
+}
+.form-con button:hover {
+    cursor: pointer;
+    background-color: #fca35b;
+}
+
+label {
+    font-size: 13px;
+}
+
 
 a {
     text-decoration: none;
+}
+
+h2 {
+    /* font-size: 30px; */
+    display: inline;
+}
+
+.restore {
+    color: black;
 }
